Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99400

[Reg 5.2 -> 5.3] qmlplugindump: error details missing on linux

XMLWordPrintable

    • 5fa9093191 (qt/qtdeclarative/dev) ae1f2a6cd4 (qt/qtdeclarative/6.3) ae1f2a6cd4 (qt/tqtc-qtdeclarative/6.3) 5fa9093191 (qt/tqtc-qtdeclarative/dev) 06d7d0d42d (qt/tqtc-qtdeclarative/5.15) 709e788425 (qt/qtdeclarative/6.2) 709e788425 (qt/qtdeclarative/6.2.3)

      On Windows:

      When running qmlplugindump in a manner that would result in an error:

      qmlplugindump -nonrelocatable Clock 1.0 C:\Qt\Examples\Qt-5.15.7\qml\qmlextensionplugins\imports\
      

      the output would be:

      QQmlComponent: Component is not ready
      file:///C:/Qt/Examples/Qt-5.15.7/qml/qmlextensionplugins/imports/typelist.qml:3:1: module "Clock" is not installed
      

      On Linux:

      the output for the corresponding command would be only:

      QQmlComponent: Component is not ready
      

      so it's essentially missing all the details.

      This seems to be fixed by switching from std::cerr to qWarning() in the qmlplugindump sources.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            miikapernu Miika Pernu
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: