qml{plugindump|importscanner}: Don't mix std::cerr and std::wcerr

Apparently that causes output to be suppressed.

Fixes: QTBUG-99400
Change-Id: I4ac6a66a10c7d2c27dfc1efa6d52afa60bdc58d6
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Fawzi Mohamed <fawzi.mohamed@qt.io>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 5fa9093191c8a0fbf765f3b51a68dea996fed76e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>